# sapientone

./: .gitignore  .tool-versions  README.md  root.code-workspace
.github/workflows/: main.yaml  pr.yaml
chrome/: bun.lockb  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
chrome/src/: App.vue  app.ts  di.ts  dom.ts  hooks.ts  injectionKeys.ts  manifest.json  query.ts
chrome/src/components/: ConfigurationForm.vue  Query.vue
chrome/src/html/popup/: index.html  main.ts
chrome/src/html/query/: index.html  main.ts  mock.html  mock.ts  style.css
iac/: Pulumi.dev.yaml  Pulumi.production.yaml  Pulumi.staging.yaml  Pulumi.yaml  config.ts  index.ts  package-lock.json  package.json
iac/modules/cloudflare/: dns.ts
iac/modules/gcp/: cloudfunctions.ts  cloudrun.ts  containers.ts  dns.ts  secrets.ts  utils.ts
lambdas/: .gitignore  Dockerfile  Makefile  pyproject.toml  requirements.txt
lambdas/sapientone/: app.py  auth.py  cli.py  dependencies.py  middleware.py  utils.py  vectors.py
lambdas/sapientone/routers/: memory.py  query.py
lambdas/sapientone/vendors/: notion.py  pgvector.py
lambdas/tests/: conftest.py
lambdas/tests/features/: ask_a_question.feature  ingest_notion_page.feature  ingest_text.feature
lambdas/tests/steps/: conftest.py  test_ask_a_question.py  test_ingest_notion_page.py  test_ingest_text.py
